task3-kubernetes/01-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
